[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox_rabbit"
version = "0.2.4"
description = "ABT's common tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "About to Break", email = "111evgenos111@gmail.com"}
]
license = {text = "Apache 2.0"}
dependencies = [
    "pika",
    "aio-pika",
    "asyncio"
]